Sun Jul  1 13:27:32 MEST 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Systematically use "=over 4" for POD linters.
	Apparently, POD linters are much stricter than would
	otherwise be needed, but that's OK.

	Fixed memory corruption on croaks during thaw().  Thanks
	to Claudio Garcia for reproducing this bug and providing the
	code to exercise it.  Added test cases for this bug, adapted
	from Claudio's code.

	Made code compile cleanly with -Wall (from Jarkko Hietaniemi).

	Changed tagnum and classnum from I32 to IV in context.  Also
	from Jarkko.

Thu Mar 15 01:22:32 MET 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Last version was wrongly compiling with assertions on, due
	to an edit glitch.  That did not cause any problem (apart from
	a slight performance loss) excepted on Win* platforms, where the
	assertion code does not compile.

Sat Feb 17 13:37:37 MET 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Version 1.0.10.

	Forgot to increase version number at previous patch (there were
	two of them, which is why we jump from 1.0.8 to 1.0.10).

Sat Feb 17 13:35:00 MET 2001   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Version 1.0.8, binary format 2.4.

	Fixed incorrect error message.

	Now bless objects ASAP at retrieve time, which is meant to fix
	two bugs:

	* Indirect references to overloaded object were not able to
	  restore overloading if the object was not blessed yet,
	  which was possible since blessing occurred only after the
	  recursive retrieval.

	* Storable hooks asking for serialization of blessed ref could
	  get un-blessed refs at retrieval time, for the very same
	  reason.

	The fix implemented here was suggested by Nick Ing-Simmons.

	Added support for blessed ref to tied structures.  This is the
	cause for the binary format change.

	Added EBCDIC version of the compatibility test with 0.6.11,
	from Peter Prymmer
